<resources>

    <string name="app_name">NYC Restaurants</string>
    <string name="edit_text_hint_title">Title</string>
    <string name="edit_text_hint_description">Description</string>
    <string name="edit_text_hint_date">Date</string>
    <string name="edit_text_hint_location">Location</string>
    <string name="text_add_image">ADD IMAGE</string>
    <string name="btn_text_save">SAVE</string>
    <string name="note_text_found_yet">No NYC Restaurants Found Yet. Kindly add one!</string>

    <string name="image_content_description">image</string>

    <string name="google_maps_api_key">AIzaSyBQAFNVKN-iMgAUX3wSZ54Cu5DCCuSJdLI</string>
    <string name="btn_text_view_on_map">VIEW ON MAP</string>
    <string name="share_location_text">SHARE LOCATION</string>

</resources>